  (Robert Collins, Andrew Bennetts)

* Removed ``InterRemoteToOther``, ``InterOtherToRemote`` and
  ``InterPackToRemotePack`` classes, as they are now unnecessary.
  (Andrew Bennetts)

* ``RepositoryFormat`` as a new attribute ``fast_deltas`` to indicate
  whether the repository can efficiently generate deltas between trees
  regardless of tree size. (Robert Collins)

* ``_walk_to_common_revisions`` will now batch up at least 50
  revisions before calling ``get_parent_map`` on the target,
  regardless of ``InterRepository``.
  (Andrew Bennetts, Robert Collins)


bzr 1.13
########

:Codename: paraskavedekatriaphobia
:1.13: 2009-03-14
:1.13rc1: 2009-03-10

This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``.  Lightweight checkouts
and stacked branches should both be much faster over remote connections.

Changes From RC1 to Final
*************************

* Fix "is not a stackable format" error when pushing a
  stackable-format branch with an unstackable-format repository to a
  destination with a default stacking policy.  (Andrew Bennetts)

* Progress bars now show the rate of network activity for
  ``bzr+ssh://`` and ``bzr://`` connections.  (Andrew Bennetts)

Compatibility Breaks
********************

* ``bzr log --line`` now indicates which revisions are merges with
  `[merge]` after the date.  Scripts which parse the output of this
  command may need to be adjusted.
  (Neil Martinsen-Burrell)

New Features
************

* ``bzr reconfigure`` now supports --with-trees and --with-no-trees
  options to change the default tree-creation policy of shared
  repositories.  (Matthew Fuller, Marius Kruger, #145033)

* Debug flags can now be set in ``~/.bazaar/bazaar.conf``.
  (Martin Pool)

* Filtered views provide a mask over the tree so that users can focus